# NLDataQueries

./: .env  .gitignore  NLDataQueries.txt  README.md  embeddings.py  main.py  pyproject.toml  requirements.txt  structure.txt  ui.html
sql/: create.sql  data.sql  queries.sql
